--- a/bower.json
+++ b/bower.json
@@ -14,11 +14,20 @@
     "angular-touch": "^1.3.0",
     "angular-moment": "~0.9.0",
     "chartjs": "~1.0.1",
-    "ng-chartjs": "~0.0.5"
+    "ng-chartjs": "~0.0.5",
+    "angular-flash": "~0.1.14",
+    "toastr": "~2.1.0",
+    "angular-strap": "~2.1.6",
+    "angular-growl": "~0.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
     "angular-scenario": "~1.3.0"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "resolutions": {
+    "angular": "~1.3.9",
+    "angular-animate": "^1.3.0",
+    "angular-sanitize": "^1.3.0"
+  }
 }
