--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,9 @@
     "angular-moment": "~0.9.0",
     "chartjs": "~1.0.1",
     "ng-chartjs": "~0.0.5",
-    "angular-flash": "~0.1.14",
     "toastr": "~2.1.0",
-    "angular-strap": "~2.1.6",
-    "angular-growl": "~0.4.0"
+    "fontawesome": "~4.2.0",
+    "firebase": "~2.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
@@ -26,7 +25,7 @@
   },
   "appPath": "app",
   "resolutions": {
-    "angular": "~1.3.9",
+    "angular": "1.3.9",
     "angular-animate": "^1.3.0",
     "angular-sanitize": "^1.3.0"
   }
