--- a/.jshintrc
+++ b/.jshintrc
@@ -4,7 +4,7 @@
   "esnext": true,
   "bitwise": true,
   "camelcase": true,
-  "curly": true,
+  "curly": false,
   "eqeqeq": true,
   "immed": true,
   "indent": 2,
@@ -19,5 +19,6 @@
   "smarttabs": true,
   "globals": {
     "angular": false
-  }
+  },
+  "asi": true
 }
